Aspose.Cells for Android 9.0.0 Examples

--- a/Examples/app/build.gradle
+++ b/Examples/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/aspose-cells-9.0.0.jar')
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
 }
